history button added. wip