@@ -75,7 +75,7 @@ public class BasicPanelTest {
     public void pressed1()
     {
         when(actionEvent.getActionCommand()).thenReturn("1");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
 
         assertEquals("Values[{}] is not 1", 1, Integer.parseInt(calculator.getValues()[calculator.getValuesPosition()]));
         assertEquals("textPane should be 1", "1", calculator.getTextPaneWithoutAnyOperator());
@@ -87,14 +87,14 @@ public class BasicPanelTest {
     public void pressed1Then5()
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("5");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
 
         assertEquals("Values[{}] is not 1", 1, Integer.parseInt(calculator.getValues()[calculator.getValuesPosition()]));
         assertEquals("textPane should be 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("{} is not positive", calculator.isPositiveNumber(String.valueOf(calculator.getValues()[calculator.getValuesPosition()])));
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
 
         assertEquals("Values[{}] is not 15", 15, Integer.parseInt(calculator.getValues()[calculator.getValuesPosition()]));
         assertEquals("textPane should be 15", "15", calculator.getTextPaneWithoutNewLineCharacters());
@@ -106,8 +106,8 @@ public class BasicPanelTest {
     public void pressed1ThenNegate()
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("±");
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performNegateButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNegateButtonActions(actionEvent);
 
         assertEquals("Values[{}] is not -1", -1, Integer.parseInt(calculator.getValues()[calculator.getValuesPosition()]));
         assertEquals("textPane should be -1", "-1", calculator.getTextPaneWithoutNewLineCharacters());
@@ -119,9 +119,9 @@ public class BasicPanelTest {
     public void pressed1ThenNegateThenAdd()
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("±").thenReturn("+");
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performNegateButtonActions(actionEvent);
-        BasicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNegateButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
 
         assertEquals("Values[0] is not -1", -1, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be -1 +", "-1 +", calculator.getTextPaneWithoutNewLineCharacters());
@@ -136,44 +136,44 @@ public class BasicPanelTest {
                 .thenReturn("1").thenReturn("5").thenReturn("±")
                 .thenReturn("+").thenReturn("5").thenReturn("±").thenReturn("=");
 
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[0] is not 1", 1, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
         assertSame("ValuesPosition should be 0", 0, calculator.getValuesPosition());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[0] is not 15", 15, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 15", "15", calculator.getTextPaneWithoutNewLineCharacters());
         assertSame("ValuesPosition should be 0", 0, calculator.getValuesPosition());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNegateButtonActions(actionEvent);
+        basicPanel.performNegateButtonActions(actionEvent);
         assertEquals("Values[0] is not -15", -15, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be -15", "-15", calculator.getTextPaneWithoutNewLineCharacters());
         assertSame("ValuesPosition should be 0", 0, calculator.getValuesPosition());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
         assertEquals("Values[0] is not -15", -15, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be -15 +", "-15 +", calculator.getTextPaneWithoutNewLineCharacters());
         assertSame("ValuesPosition should be 1", 1, calculator.getValuesPosition());
         assertTrue("Expecting isAdding to be set", calculator.isAdding());
         assertFalse("We are still on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[1] is not 5", 5, Integer.parseInt(calculator.getValues()[1]));
         assertEquals("textPane should be 5", "5", calculator.getTextPaneWithoutNewLineCharacters());
         assertSame("ValuesPosition should be 1", 1, calculator.getValuesPosition());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNegateButtonActions(actionEvent);
+        basicPanel.performNegateButtonActions(actionEvent);
         assertEquals("Values[1] is not -5", -5, Integer.parseInt(calculator.getValues()[1]));
         assertEquals("textPane should be -5", "-5", calculator.getTextPaneWithoutNewLineCharacters());
         assertSame("ValuesPosition should be 1", 1, calculator.getValuesPosition());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performEqualsButtonActions(actionEvent);
+        basicPanel.performEqualsButtonActions(actionEvent);
         assertEquals("Values[0] is not -20", -20, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("Values[1] is not empty", "", calculator.getValues()[1]);
         assertEquals("textPane should be -20", "-20", calculator.getTextPaneWithoutNewLineCharacters());
@@ -186,9 +186,9 @@ public class BasicPanelTest {
         when(actionEvent.getActionCommand()).thenReturn(".");
         calculator.getValues()[0] = "";
         calculator.getTextPane().setText("");
-        BasicPanel.performDotButtonActions(actionEvent);
+        basicPanel.performDecimalButtonActions(actionEvent);
         assertEquals("textPane is not as expected", "0.", calculator.getTextPaneWithoutNewLineCharacters());
-        assertFalse("buttonDot should be disabled", calculator.getButtonDot().isEnabled());
+        assertFalse("buttonDot should be disabled", calculator.getButtonDecimal().isEnabled());
     }
 
     @Test
@@ -197,10 +197,10 @@ public class BasicPanelTest {
         when(actionEvent.getActionCommand()).thenReturn(".");
         calculator.getTextPane().setText("544");
         calculator.getValues()[0] = "544";
-        BasicPanel.performDotButtonActions(actionEvent);
+        basicPanel.performDecimalButtonActions(actionEvent);
         assertEquals("textPane is not as expected", "544.", calculator.getTextPaneWithoutNewLineCharacters());
         assertEquals("Values[0]", "544.", calculator.getValues()[0]);
-        assertFalse("buttonDot should be disabled", calculator.getButtonDot().isEnabled());
+        assertFalse("buttonDot should be disabled", calculator.getButtonDecimal().isEnabled());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
     }
 
@@ -209,14 +209,14 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("2").thenReturn("3")
                 .thenReturn("4").thenReturn(".");
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performDotButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performDecimalButtonActions(actionEvent);
         assertEquals("textPane is not as expected", "1,234.", calculator.getTextPaneWithoutNewLineCharacters());
         assertEquals("Values[0]", "1234.", calculator.getValues()[0]);
-        assertFalse("buttonDot should be disabled", calculator.getButtonDot().isEnabled());
+        assertFalse("buttonDot should be disabled", calculator.getButtonDecimal().isEnabled());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
     }
 
@@ -224,14 +224,14 @@ public class BasicPanelTest {
     public void pressedDotThen9()
     {
         when(actionEvent.getActionCommand()).thenReturn(".").thenReturn("9");
-        BasicPanel.performDotButtonActions(actionEvent);
+        basicPanel.performDecimalButtonActions(actionEvent);
 
         assertEquals("Values[0] is not 0.", "0.", calculator.getValues()[0]);
         assertEquals("textPane should be 0.", "0.", calculator.getTextPaneWithoutNewLineCharacters());
-        assertFalse("buttonDot should be disabled", calculator.getButtonDot().isEnabled());
+        assertFalse("buttonDot should be disabled", calculator.getButtonDecimal().isEnabled());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         if (calculator.isNegativeNumber(calculator.getValues()[0])) fail("Number is negative");
 
         assertEquals( 0.9f, Double.parseDouble(calculator.getValues()[0]), delta); // 0.8999999761581421
@@ -245,26 +245,26 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn(".")
                 .thenReturn("5").thenReturn("+").thenReturn("2");
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performDotButtonActions(actionEvent);
-        assertFalse("Expected dot button to be disabled", calculator.getButtonDot().isEnabled());
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performAdditionButtonActions(actionEvent);
-        BasicPanel.performNumberButtonActions(actionEvent);
-        assertTrue("Expected dot button to be enabled", calculator.getButtonDot().isEnabled());
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performDecimalButtonActions(actionEvent);
+        assertFalse("Expected dot button to be disabled", calculator.getButtonDecimal().isEnabled());
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        assertTrue("Expected dot button to be enabled", calculator.getButtonDecimal().isEnabled());
     }
 
     @Test
     public void pressed1ThenAdd()
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("+");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
 
         assertEquals("Values[0] is not 1", 1, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
         assertEquals("Values[0] is not 1", 1, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 1 +", "1 +", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expecting isAdding to be set", calculator.isAdding());
@@ -275,19 +275,19 @@ public class BasicPanelTest {
     public void pressed1Then5ThenAdd()
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("5").thenReturn("+");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
 
         assertEquals("Values[0] is not 1", 1, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
 
         assertEquals("Values[0] is not 15", 15, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 15", "15", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
 
         assertEquals("Values[0] is not 1", 15, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 15 +", "15 +", calculator.getTextPaneWithoutNewLineCharacters());
@@ -299,13 +299,13 @@ public class BasicPanelTest {
     public void pressed1ThenSubtract()
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("-");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
 
         assertEquals("Values[0] is not 1", 1, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
 
         assertEquals("Values[0] is not 1", 1, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 1 -", "1 -", calculator.getTextPaneWithoutNewLineCharacters());
@@ -317,19 +317,19 @@ public class BasicPanelTest {
     public void pressed1Then5ThenSubtract()
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("5").thenReturn("-");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
 
         assertEquals("Values[0] is not 1", 1, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
 
         assertEquals("Values[0] is not 15", 15, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 15", "15", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
 
         assertEquals("Values[0] is not 1", 15, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 15 -", "15 -", calculator.getTextPaneWithoutNewLineCharacters());
@@ -343,29 +343,29 @@ public class BasicPanelTest {
         when(actionEvent.getActionCommand())
                 .thenReturn("1").thenReturn("5").thenReturn("-")
                 .thenReturn("5").thenReturn("=");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[0] is not 1", 1, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[0] is not 15", 15, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 15", "15", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
         assertEquals("Values[0] is not 15", 15, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 15 -", "15 -", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isSubtracting to be set", calculator.isSubtracting());
         assertSame("ValuesPosition should be 1", 1, calculator.getValuesPosition());
         assertFalse("We are still on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[1] is not 5", 5, Integer.parseInt(calculator.getValues()[1]));
         assertEquals("textPane should be 5", "5", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performEqualsButtonActions(actionEvent);
+        basicPanel.performEqualsButtonActions(actionEvent);
         assertEquals("Values[0] is not 10", 10, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("Values[1] is not empty", "", calculator.getValues()[1]);
         assertEquals("textPane should be 10", "10", calculator.getTextPaneWithoutNewLineCharacters());
@@ -378,13 +378,13 @@ public class BasicPanelTest {
     public void pressed1ThenMultiply()
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("✕");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
 
         assertEquals("Values[0] is not 1", 1, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performMultiplicationActions(actionEvent);
+        basicPanel.performMultiplicationActions(actionEvent);
 
         assertEquals("Values[0] is not 1", 1, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 1 ✕", "1 ✕", calculator.getTextPaneWithoutNewLineCharacters());
@@ -395,19 +395,19 @@ public class BasicPanelTest {
     public void pressed1Then5ThenMultiply()
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("5").thenReturn("✕");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
 
         assertEquals("Values[0] is not 1", 1, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
 
         assertEquals("Values[0] is not 15", 15, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 15", "15", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
 
         assertEquals("Values[0] is not 1", 15, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 15 ✕", "15 ✕", calculator.getTextPaneWithoutNewLineCharacters());
@@ -421,34 +421,34 @@ public class BasicPanelTest {
         when(actionEvent.getActionCommand())
                 .thenReturn("1").thenReturn("0").thenReturn("✕")
                 .thenReturn("1").thenReturn("0").thenReturn("=");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[0] is not 1", 1, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[0] is not 10", 10, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 10", "10", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performMultiplicationActions(actionEvent);
+        basicPanel.performMultiplicationActions(actionEvent);
         assertEquals("Values[0] is not 10", 10, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 10 ✕", "10 ✕", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expecting isMultiplying to be set", calculator.isMultiplying());
         assertSame("ValuesPosition should be 1", 1, calculator.getValuesPosition());
         assertFalse("We are still on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[1] is not 1", 1, Integer.parseInt(calculator.getValues()[1]));
         assertEquals("textPane should be 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[1] is not 10", 10, Integer.parseInt(calculator.getValues()[1]));
         assertEquals("textPane should be 10", "10", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performEqualsButtonActions(actionEvent);
+        basicPanel.performEqualsButtonActions(actionEvent);
         assertEquals("Values[0] is not 100", 100, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("Values[1] is not empty", "", calculator.getValues()[1]);
         assertEquals("textPane should be 100", "100", calculator.getTextPaneWithoutNewLineCharacters());
@@ -461,7 +461,7 @@ public class BasicPanelTest {
     public void pressedAddWithNoNumberInput()
     {
         when(actionEvent.getActionCommand()).thenReturn("+");
-        BasicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
 
         assertEquals("Values[{}] is not empty", "", calculator.getValues()[calculator.getValuesPosition()]);
         assertEquals("textPane should display 'Enter a Number'", "Enter a Number", calculator.getTextPaneWithoutAnyOperator());
@@ -472,9 +472,9 @@ public class BasicPanelTest {
     public void pressed1ThenAddThenAddAgain()
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("+");
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performAdditionButtonActions(actionEvent);
-        BasicPanel.performAdditionButtonActions(actionEvent); // no thenReturn necessary. Uses last value sent to method
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent); // no thenReturn necessary. Uses last value sent to method
 
         assertEquals("Values[{}] is not 1", "1", calculator.getValues()[0]);
         assertTrue("Expected isAdding to be true", calculator.isAdding());
@@ -486,7 +486,7 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("+");
         calculator.getTextPane().setText("E");
-        BasicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
         assertEquals("Expected error message in textPane", "E", calculator.getTextPaneWithoutNewLineCharacters());
     }
 
@@ -495,7 +495,7 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("+");
         calculator.getTextPane().setText("E");
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
         assertEquals("Expected error message in textPane", "E", calculator.getTextPaneWithoutNewLineCharacters());
     }
 
@@ -504,7 +504,7 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("+");
         calculator.getTextPane().setText("E");
-        BasicPanel.performMultiplicationActions(actionEvent);
+        basicPanel.performMultiplicationActions(actionEvent);
         assertEquals("Expected error message in textPane", "E", calculator.getTextPaneWithoutNewLineCharacters());
     }
 
@@ -513,7 +513,7 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("+");
         calculator.getTextPane().setText("E");
-        BasicPanel.performDivideButtonActions(actionEvent);
+        basicPanel.performDivideButtonActions(actionEvent);
         assertEquals("Expected error message in textPane", "E", calculator.getTextPaneWithoutNewLineCharacters());
     }
 
@@ -522,7 +522,7 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("+");
         calculator.getTextPane().setText("Number too big!");
-        BasicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
         assertEquals("Expected error message in textPane", "Number too big!", calculator.getTextPaneWithoutNewLineCharacters());
     }
 
@@ -531,22 +531,27 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("+")
                 .thenReturn("5").thenReturn("+");
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performAdditionButtonActions(actionEvent);
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
         assertEquals("Expected textPane shows 6 +", "6 +", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isAdd to be true", calculator.isAdding());
     }
 
     @Test
-    public void pressedSubtractWithTextPaneBlank()
+    public void pressedSubtractWithTextPaneBlankThen5()
     {
-        when(actionEvent.getActionCommand()).thenReturn("-");
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        when(actionEvent.getActionCommand()).thenReturn("-").thenReturn("5");
+        basicPanel.performSubtractionButtonActions(actionEvent);
         assertEquals("Expected textPane to show - symbol", "-", calculator.getTextPaneWithoutNewLineCharacters());
         assertEquals("Expected values[0] to be blank", "", calculator.getValues()[0]);
-        assertTrue("Expected isNegating is true", calculator.isNegating());
+        assertTrue("Expected isNegating to be true", calculator.isNegating());
+        basicPanel.performNumberButtonActions(actionEvent);
+        assertEquals("Expected textPane to show -5", "-5", calculator.getTextPaneWithoutNewLineCharacters());
+        assertEquals("Expected values[0] to be -5", "-5", calculator.getValues()[0]);
+        assertFalse("Expected isNegating to be false", calculator.isNegating());
+        assertTrue("Expected isNegative to be true", calculator.isNumberNegative());
     }
 
     @Test
@@ -554,9 +559,9 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("5").thenReturn("+").thenReturn("-");
         calculator.setNegating(false);
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performAdditionButtonActions(actionEvent);
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
         assertEquals("Expected textPane to -", "-", calculator.getTextPaneWithoutNewLineCharacters());
         assertEquals("Expected values[0] to be 5", "5", calculator.getValues()[0]);
         assertTrue("Expected isNegating is true", calculator.isNegating());
@@ -567,13 +572,13 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("-")
                 .thenReturn("5").thenReturn("+");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[0] to be 1", "1", calculator.getValues()[0]);
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
         assertTrue("Expected isSubtract to be true", calculator.isSubtracting());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[1] to be 5", "5", calculator.getValues()[1]);
-        BasicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
         assertEquals("Expected textPane shows -4 +", "-4 +", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isAdd to be true", calculator.isAdding());
     }
@@ -583,13 +588,13 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("-")
                 .thenReturn("5").thenReturn("-");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[0] to be 1", "1", calculator.getValues()[0]);
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
         assertTrue("Expected isSubtract to be true", calculator.isSubtracting());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[1] to be 5", "5", calculator.getValues()[1]);
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
         assertEquals("Expected textPane shows -4 -", "-4 -", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isSubtracting to be true", calculator.isSubtracting());
     }
@@ -599,13 +604,13 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("-")
                 .thenReturn("5").thenReturn("✕");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[0] to be 1", "1", calculator.getValues()[0]);
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
         assertTrue("Expected isSubtract to be true", calculator.isSubtracting());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[1] to be 5", "5", calculator.getValues()[1]);
-        BasicPanel.performMultiplicationActions(actionEvent);
+        basicPanel.performMultiplicationActions(actionEvent);
         assertEquals("Expected textPane shows -4 ✕", "-4 ✕", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isMultiplying to be true", calculator.isMultiplying());
     }
@@ -615,13 +620,13 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("÷")
                 .thenReturn("5").thenReturn("-");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[0] to be 1", "1", calculator.getValues()[0]);
-        BasicPanel.performDivideButtonActions(actionEvent);
+        basicPanel.performDivideButtonActions(actionEvent);
         assertTrue("Expected isDividing to be true", calculator.isDividing());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[1] to be 5", "5", calculator.getValues()[1]);
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
         assertEquals("Expected textPane shows 0.2 -", "0.2 -", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isDividing to be true", calculator.isDividing());
     }
@@ -631,13 +636,13 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("-")
                 .thenReturn("5").thenReturn("÷");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[0] to be 1", "1", calculator.getValues()[0]);
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
         assertTrue("Expected isSubtract to be true", calculator.isSubtracting());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[1] to be 5", "5", calculator.getValues()[1]);
-        BasicPanel.performDivideButtonActions(actionEvent);
+        basicPanel.performDivideButtonActions(actionEvent);
         assertEquals("Expected textPane shows -4 ÷", "-4 ÷", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isDividing to be true", calculator.isDividing());
     }
@@ -647,13 +652,13 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("✕")
                 .thenReturn("5").thenReturn("+");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[0] to be 1", "1", calculator.getValues()[0]);
-        BasicPanel.performMultiplicationActions(actionEvent);
+        basicPanel.performMultiplicationActions(actionEvent);
         assertTrue("Expected isMultiplying to be true", calculator.isMultiplying());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[1] to be 5", "5", calculator.getValues()[1]);
-        BasicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
         assertEquals("Expected textPane shows 5 +", "5 +", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isAdd to be true", calculator.isAdding());
     }
@@ -663,13 +668,13 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("✕")
                 .thenReturn("5").thenReturn("-");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[0] to be 1", "1", calculator.getValues()[0]);
-        BasicPanel.performMultiplicationActions(actionEvent);
+        basicPanel.performMultiplicationActions(actionEvent);
         assertTrue("Expected isMultiplying to be true", calculator.isMultiplying());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[1] to be 5", "5", calculator.getValues()[1]);
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
         assertEquals("Expected textPane shows 5 -", "5 -", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isSubtracting to be true", calculator.isSubtracting());
     }
@@ -679,13 +684,13 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("✕")
                 .thenReturn("5").thenReturn("✕");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[0] to be 1", "1", calculator.getValues()[0]);
-        BasicPanel.performMultiplicationActions(actionEvent);
+        basicPanel.performMultiplicationActions(actionEvent);
         assertTrue("Expected isMultiplying to be true", calculator.isMultiplying());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[1] to be 5", "5", calculator.getValues()[1]);
-        BasicPanel.performMultiplicationActions(actionEvent);
+        basicPanel.performMultiplicationActions(actionEvent);
         assertEquals("Expected textPane shows 5 ✕", "5 ✕", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isMultiplying to be true", calculator.isMultiplying());
     }
@@ -695,13 +700,13 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("✕")
                 .thenReturn("5").thenReturn("÷");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[0] to be 1", "1", calculator.getValues()[0]);
-        BasicPanel.performMultiplicationActions(actionEvent);
+        basicPanel.performMultiplicationActions(actionEvent);
         assertTrue("Expected isMultiplying to be true", calculator.isMultiplying());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[1] to be 5", "5", calculator.getValues()[1]);
-        BasicPanel.performDivideButtonActions(actionEvent);
+        basicPanel.performDivideButtonActions(actionEvent);
         assertEquals("Expected textPane shows 5 ÷", "5 ÷", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isDividing to be true", calculator.isDividing());
     }
@@ -711,13 +716,13 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("÷")
                 .thenReturn("5").thenReturn("✕");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[0] to be 1", "1", calculator.getValues()[0]);
-        BasicPanel.performDivideButtonActions(actionEvent);
+        basicPanel.performDivideButtonActions(actionEvent);
         assertTrue("Expected isDividing to be true", calculator.isDividing());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[1] to be 5", "5", calculator.getValues()[1]);
-        BasicPanel.performMultiplicationActions(actionEvent);
+        basicPanel.performMultiplicationActions(actionEvent);
         assertEquals("Expected textPane shows 0.2 ✕", "0.2 ✕", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isMultiplying to be true", calculator.isMultiplying());
     }
@@ -726,9 +731,9 @@ public class BasicPanelTest {
     public void pressed1ThenMultiplyThenMultiply()
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("✕").thenReturn("✕");
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performMultiplicationActions(actionEvent);
-        BasicPanel.performMultiplicationActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performMultiplicationActions(actionEvent);
+        basicPanel.performMultiplicationActions(actionEvent);
         assertTrue("Expected isMultiplying to be true", calculator.isMultiplying());
         assertEquals("Expected values[0] to be 1", "1", calculator.getValues()[0]);
     }
@@ -738,13 +743,13 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("÷")
                 .thenReturn("5").thenReturn("+");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[0] to be 1", "1", calculator.getValues()[0]);
-        BasicPanel.performDivideButtonActions(actionEvent);
+        basicPanel.performDivideButtonActions(actionEvent);
         assertTrue("Expected isDividing to be true", calculator.isDividing());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[1] to be 5", "5", calculator.getValues()[1]);
-        BasicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
         assertEquals("Expected textPane shows 0.2 +", "0.2 +", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isAdd to be true", calculator.isAdding());
     }
@@ -754,13 +759,13 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("÷")
                 .thenReturn("5").thenReturn("÷");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[0] to be 1", "1", calculator.getValues()[0]);
-        BasicPanel.performDivideButtonActions(actionEvent);
+        basicPanel.performDivideButtonActions(actionEvent);
         assertTrue("Expected isDividing to be true", calculator.isDividing());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[1] to be 5", "5", calculator.getValues()[1]);
-        BasicPanel.performDivideButtonActions(actionEvent);
+        basicPanel.performDivideButtonActions(actionEvent);
         assertEquals("Expected textPane shows 0.2 ÷", "0.2 ÷", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isDividing to be true", calculator.isDividing());
     }
@@ -769,9 +774,9 @@ public class BasicPanelTest {
     public void pressed1ThenDivideThenDivide()
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("÷").thenReturn("÷");
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performDivideButtonActions(actionEvent);
-        BasicPanel.performDivideButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performDivideButtonActions(actionEvent);
+        basicPanel.performDivideButtonActions(actionEvent);
         assertTrue("Expected isDividing to be true", calculator.isDividing());
         assertEquals("Expected values[0] to be 1", "1", calculator.getValues()[0]);
     }
@@ -780,10 +785,10 @@ public class BasicPanelTest {
     public void pressed1ThenDivideThen0()
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("÷").thenReturn("0").thenReturn("=");
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performDivideButtonActions(actionEvent);
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performEqualsButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performDivideButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performEqualsButtonActions(actionEvent);
         assertFalse("Expected isDividing to be false", calculator.isDividing());
         assertEquals("Expected values[0] to be blank", "", calculator.getValues()[0]);
     }
@@ -793,10 +798,10 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("+")
                 .thenReturn("5").thenReturn("-");
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performAdditionButtonActions(actionEvent);
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
         calculator.setValuesPosition(1);
         assertEquals("Expected textPane shows 6 -", "6 -", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isSubtract to be true", calculator.isSubtracting());
@@ -807,10 +812,10 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("+")
                 .thenReturn("5").thenReturn("✕");
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performAdditionButtonActions(actionEvent);
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performMultiplicationActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performMultiplicationActions(actionEvent);
         calculator.setValuesPosition(1);
         assertEquals("Expected textPane shows 6 ✕", "6 ✕", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isMultiplying to be true", calculator.isMultiplying());
@@ -821,20 +826,33 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("+")
                 .thenReturn("5").thenReturn("÷");
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performAdditionButtonActions(actionEvent);
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performDivideButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performDivideButtonActions(actionEvent);
         calculator.setValuesPosition(1);
         assertEquals("Expected textPane shows 6 ÷", "6 ÷", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isDividing to be true", calculator.isDividing());
     }
 
     @Test
+    public void pressedAddThenDivideWhenNumberIsMaximum()
+    {
+        when(actionEvent.getActionCommand()).thenReturn("÷");
+        calculator.getValues()[0] = "9999998";
+        calculator.getValues()[1] = "2";
+        calculator.setAdding(true);
+        calculator.setValuesPosition(1);
+        basicPanel.performDivideButtonActions(actionEvent);
+        assertEquals("Expected textPane shows 1.0E7", "1.0E7", calculator.getTextPaneWithoutNewLineCharacters());
+        assertFalse("Expected isDividing to be false", calculator.isDividing());
+    }
+
+    @Test
     public void pressedSubtractWithNoNumberInput()
     {
         when(actionEvent.getActionCommand()).thenReturn("-");
-        BasicPanel.performAdditionButtonActions(actionEvent);
+        basicPanel.performAdditionButtonActions(actionEvent);
 
         assertEquals("Values[{}] is not empty", "", calculator.getValues()[calculator.getValuesPosition()]);
         assertEquals("textPane should display 'Enter a Number'", "Enter a Number", calculator.getTextPaneWithoutAnyOperator());
@@ -845,7 +863,7 @@ public class BasicPanelTest {
     public void pressedMultiplyWithNoNumberInput()
     {
         when(actionEvent.getActionCommand()).thenReturn("✕");
-        BasicPanel.performMultiplicationActions(actionEvent);
+        basicPanel.performMultiplicationActions(actionEvent);
 
         assertEquals("Values[{}] is not empty", "", calculator.getValues()[calculator.getValuesPosition()]);
         assertEquals("textPane should display 'Enter a Number'", "Enter a Number", calculator.getTextPaneWithoutAnyOperator());
@@ -856,7 +874,7 @@ public class BasicPanelTest {
     public void pressedDivideWithNoNumberInput()
     {
         when(actionEvent.getActionCommand()).thenReturn("÷");
-        BasicPanel.performDivideButtonActions(actionEvent);
+        basicPanel.performDivideButtonActions(actionEvent);
 
         assertEquals("Values[{}] is not empty", "", calculator.getValues()[calculator.getValuesPosition()]);
         assertEquals("textPane should display 'Enter a Number'", "Enter a Number", calculator.getTextPaneWithoutAnyOperator());
@@ -869,7 +887,7 @@ public class BasicPanelTest {
         calculator.setAdding(true);
         calculator.getValues()[0] = "5";
         calculator.getValues()[1] = "10";
-        BasicPanel.performEqualsButtonActions(actionEvent);
+        basicPanel.performEqualsButtonActions(actionEvent);
         assertEquals("Did not get back expected result", "15", calculator.getValues()[0]);
     }
 
@@ -879,7 +897,7 @@ public class BasicPanelTest {
         calculator.setAdding(true);
         calculator.getValues()[0] = "5.5";
         calculator.getValues()[1] = "10";
-        BasicPanel.performEqualsButtonActions(actionEvent);
+        basicPanel.performEqualsButtonActions(actionEvent);
         assertEquals("Did not get back expected result", "15.5", calculator.getValues()[0]);
     }
 
@@ -889,7 +907,7 @@ public class BasicPanelTest {
         calculator.setSubtracting(true);
         calculator.getValues()[0] = "15";
         calculator.getValues()[1] = "10";
-        BasicPanel.performEqualsButtonActions(actionEvent);
+        basicPanel.performEqualsButtonActions(actionEvent);
         assertEquals("Did not get back expected result", "5", calculator.getValues()[0]);
     }
 
@@ -899,7 +917,7 @@ public class BasicPanelTest {
         calculator.setSubtracting(true);
         calculator.getValues()[0] = "15.5";
         calculator.getValues()[1] = "10";
-        BasicPanel.performEqualsButtonActions(actionEvent);
+        basicPanel.performEqualsButtonActions(actionEvent);
         assertEquals("Did not get back expected result", "5.5", calculator.getValues()[0]);
     }
 
@@ -909,7 +927,7 @@ public class BasicPanelTest {
         calculator.setMultiplying(true);
         calculator.getValues()[0] = "15";
         calculator.getValues()[1] = "10";
-        BasicPanel.performEqualsButtonActions(actionEvent);
+        basicPanel.performEqualsButtonActions(actionEvent);
         assertEquals("Did not get back expected result", "150", calculator.getValues()[0]);
     }
 
@@ -919,7 +937,7 @@ public class BasicPanelTest {
         calculator.setMultiplying(true);
         calculator.getValues()[0] = "5.5";
         calculator.getValues()[1] = "10.2";
-        BasicPanel.performEqualsButtonActions(actionEvent);
+        basicPanel.performEqualsButtonActions(actionEvent);
         assertEquals("Did not get back expected result", "56.1", calculator.getValues()[0]);
     }
 
@@ -930,7 +948,7 @@ public class BasicPanelTest {
         calculator.getValues()[0] = "15";
         calculator.getValues()[1] = "5";
         calculator.setCalculatorType(BASIC);
-        BasicPanel.performEqualsButtonActions(actionEvent);
+        basicPanel.performEqualsButtonActions(actionEvent);
         assertEquals("Did not get back expected result", "3", calculator.getValues()[0]);
     }
 
@@ -941,7 +959,7 @@ public class BasicPanelTest {
         calculator.getValues()[0] = "15.5";
         calculator.getValues()[1] = "5";
         calculator.setCalculatorType(BASIC);
-        BasicPanel.performEqualsButtonActions(actionEvent);
+        basicPanel.performEqualsButtonActions(actionEvent);
         assertEquals("Did not get back expected result", "3.1", calculator.getValues()[0]);
     }
 
@@ -952,7 +970,7 @@ public class BasicPanelTest {
         calculator.getValues()[0] = "15.5";
         calculator.getValues()[1] = "0";
         calculator.setCalculatorType(BASIC);
-        BasicPanel.performEqualsButtonActions(actionEvent);
+        basicPanel.performEqualsButtonActions(actionEvent);
         assertEquals("Expected values[0] to be blank", "", calculator.getValues()[0]);
         assertEquals("Expected textPane to show error", "Infinity", calculator.getTextPaneWithoutNewLineCharacters());
     }
@@ -963,7 +981,7 @@ public class BasicPanelTest {
         when(actionEvent.getActionCommand()).thenReturn("⌫");
         calculator.getTextPane().setText("35");
         calculator.getValues()[0] = "35";
-        BasicPanel.performDeleteButtonActions(actionEvent);
+        basicPanel.performDeleteButtonActions(actionEvent);
         assertEquals("Values[0] is not 3", 3, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane does not equal 3", "3", calculator.getTextPaneWithoutNewLineCharacters());
     }
@@ -975,23 +993,23 @@ public class BasicPanelTest {
         calculator.getTextPane().setText("15.6 +");
         calculator.getValues()[0] = "15.6";
         //calculator.setDotPressed(true);
-        calculator.getButtonDot().setEnabled(false);
+        calculator.getButtonDecimal().setEnabled(false);
         calculator.setAdding(true);
-        BasicPanel.performDeleteButtonActions(actionEvent);
+        basicPanel.performDeleteButtonActions(actionEvent);
         assertEquals("Values[0] is not 15.6", 15.6, Double.parseDouble(calculator.getValues()[0]), delta);
         assertEquals("textPane does not equal 15.6", "15.6", calculator.getTextPaneWithoutNewLineCharacters());
-        assertFalse("Expected dot button to be disabled", calculator.getButtonDot().isEnabled());
+        assertFalse("Expected dot button to be disabled", calculator.getButtonDecimal().isEnabled());
         assertFalse("Expected isAdding to be false", calculator.isAdding());
 
-        BasicPanel.performDeleteButtonActions(actionEvent);
+        basicPanel.performDeleteButtonActions(actionEvent);
         assertEquals("Values[0] is not 15.", 15., Double.parseDouble(calculator.getValues()[0]), delta);
         assertEquals("textPane does not equal 15.", "15.", calculator.getTextPaneWithoutNewLineCharacters());
-        assertFalse("Expected dot button to be disabled", calculator.getButtonDot().isEnabled());
+        assertFalse("Expected dot button to be disabled", calculator.getButtonDecimal().isEnabled());
 
-        BasicPanel.performDeleteButtonActions(actionEvent);
+        basicPanel.performDeleteButtonActions(actionEvent);
         assertEquals("Values[0] is not 15", 15, Double.parseDouble(calculator.getValues()[0]), delta);
         assertEquals("textPane does not equal 15", "15", calculator.getTextPaneWithoutNewLineCharacters());
-        assertTrue("Expected dot button to be enabled", calculator.getButtonDot().isEnabled());
+        assertTrue("Expected dot button to be enabled", calculator.getButtonDecimal().isEnabled());
     }
 
     @Test
@@ -1000,12 +1018,12 @@ public class BasicPanelTest {
         when(actionEvent.getActionCommand()).thenReturn("⌫");
         calculator.getTextPane().setText("1 -");
         calculator.getValues()[0] = "1";
-        calculator.getButtonDot().setEnabled(false);
+        calculator.getButtonDecimal().setEnabled(false);
         calculator.setSubtracting(true);
-        BasicPanel.performDeleteButtonActions(actionEvent);
+        basicPanel.performDeleteButtonActions(actionEvent);
         assertEquals("Values[0] is not 1", 1, Double.parseDouble(calculator.getValues()[0]), delta);
         assertEquals("textPane does not equal 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
-        assertTrue("Expected dot button to be enabled", calculator.getButtonDot().isEnabled());
+        assertTrue("Expected dot button to be enabled", calculator.getButtonDecimal().isEnabled());
         assertFalse("Expected isSubtracting to be false", calculator.isSubtracting());
     }
 
@@ -1018,10 +1036,10 @@ public class BasicPanelTest {
         calculator.getValues()[1] = "-6";
         calculator.setNegating(true);
         calculator.setSubtracting(true);
-        BasicPanel.performEqualsButtonActions(actionEvent);
+        basicPanel.performEqualsButtonActions(actionEvent);
         assertEquals("Values[0] is not 1", 1, Double.parseDouble(calculator.getValues()[0]), delta);
         assertEquals("textPane does not equal 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
-        assertTrue("Expected dot button to be enabled", calculator.getButtonDot().isEnabled());
+        assertTrue("Expected dot button to be enabled", calculator.getButtonDecimal().isEnabled());
         assertFalse("Expected isSubtracting to be false", calculator.isSubtracting());
     }
 
@@ -1029,18 +1047,18 @@ public class BasicPanelTest {
     public void pressedSubtractWithBlankTextPaneThen5ThenSubtractThen5()
     {
         when(actionEvent.getActionCommand()).thenReturn("-").thenReturn("5").thenReturn("-").thenReturn("-").thenReturn("5").thenReturn("=");
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
         assertTrue("Expected isNegating to be true", calculator.isNegating());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[0] is not -5", -5, Double.parseDouble(calculator.getValues()[0]), delta);
         assertEquals("textPane does not equal -5", "-5", calculator.getTextPaneWithoutNewLineCharacters());
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
         assertFalse("Expected isNegating to be false", calculator.isNegating());
         assertTrue("Expected isSubtracting to be true", calculator.isSubtracting());
-        BasicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
         assertTrue("Expected isNegating to be true", calculator.isNegating());
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performEqualsButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performEqualsButtonActions(actionEvent);
         assertEquals("Values[0] is not 0", 0, Double.parseDouble(calculator.getValues()[0]), delta);
         assertEquals("textPane does not equal 0", "0", calculator.getTextPaneWithoutNewLineCharacters());
     }
@@ -1051,12 +1069,12 @@ public class BasicPanelTest {
         when(actionEvent.getActionCommand()).thenReturn("⌫");
         calculator.getTextPane().setText("1 ✕");
         calculator.getValues()[0] = "1";
-        calculator.getButtonDot().setEnabled(false);
+        calculator.getButtonDecimal().setEnabled(false);
         calculator.setMultiplying(true);
-        BasicPanel.performDeleteButtonActions(actionEvent);
+        basicPanel.performDeleteButtonActions(actionEvent);
         assertEquals("Values[0] is not 1", 1, Double.parseDouble(calculator.getValues()[0]), delta);
         assertEquals("textPane does not equal 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
-        assertTrue("Expected dot button to be enabled", calculator.getButtonDot().isEnabled());
+        assertTrue("Expected dot button to be enabled", calculator.getButtonDecimal().isEnabled());
         assertFalse("Expected isMultiplying to be false", calculator.isMultiplying());
     }
 
@@ -1066,12 +1084,12 @@ public class BasicPanelTest {
         when(actionEvent.getActionCommand()).thenReturn("⌫");
         calculator.getTextPane().setText("1 ÷");
         calculator.getValues()[0] = "1";
-        calculator.getButtonDot().setEnabled(false);
+        calculator.getButtonDecimal().setEnabled(false);
         calculator.setDividing(true);
-        BasicPanel.performDeleteButtonActions(actionEvent);
+        basicPanel.performDeleteButtonActions(actionEvent);
         assertEquals("Values[0] is not 1", 1, Double.parseDouble(calculator.getValues()[0]), delta);
         assertEquals("textPane does not equal 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
-        assertTrue("Expected dot button to be enabled", calculator.getButtonDot().isEnabled());
+        assertTrue("Expected dot button to be enabled", calculator.getButtonDecimal().isEnabled());
         assertFalse("Expected isDividing to be false", calculator.isDividing());
     }
 
@@ -1084,32 +1102,33 @@ public class BasicPanelTest {
         calculator.getValues()[1] = "6";
         calculator.setValuesPosition(1);
         //calculator.setDotPressed(false);
-        calculator.getButtonDot().setEnabled(true);
+        calculator.getButtonDecimal().setEnabled(true);
         calculator.setAdding(true);
         assertEquals("Values[1] is not 6", 6, Integer.parseInt(calculator.getValues()[1]));
 
-        BasicPanel.performDeleteButtonActions(actionEvent);
+        basicPanel.performDeleteButtonActions(actionEvent);
         assertEquals("Values[0] is not 15.6", 15.6, Double.parseDouble(calculator.getValues()[0]), delta);
         assertEquals("textPane does not equal blank", "", calculator.getTextPaneWithoutNewLineCharacters());
         assertFalse("Expected dot button not to be pressed", calculator.isDotPressed());
-        assertTrue("Expected dot button to be enabled", calculator.getButtonDot().isEnabled());
+        assertTrue("Expected dot button to be enabled", calculator.getButtonDecimal().isEnabled());
         assertTrue("Expected isAdding to be true", calculator.isAdding());
 
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[1] is not 5", 5, Integer.parseInt(calculator.getValues()[1]));
         assertEquals("textPane does not equal blank", "5", calculator.getTextPaneWithoutNewLineCharacters());
         assertFalse("Expected dot button not to be pressed", calculator.isDotPressed());
-        assertTrue("Expected dot button to be enabled", calculator.getButtonDot().isEnabled());
+        assertTrue("Expected dot button to be enabled", calculator.getButtonDecimal().isEnabled());
         assertTrue("Expected isAdding to be true", calculator.isAdding());
     }
 
     @Test
     public void pressingClearRestoresCalculatorToStartFunctionality()
     {
-        when(actionEvent.getActionCommand()).thenReturn("calculator");
-        BasicPanel.performClearButtonActions(actionEvent);
-        for ( int i=0; i<3; i++) {
-            assertTrue("Values@"+i+" is not blank", StringUtils.isBlank(calculator.getValues()[i]));
+        when(actionEvent.getActionCommand()).thenReturn("C");
+        basicPanel.performClearButtonActions(actionEvent);
+        assertTrue("Values[0] should be 0", calculator.getValues()[0].equals("0"));
+        for ( int i=1; i<3; i++) {
+            assertTrue("Values["+i+"] is not blank", calculator.getValues()[i].isBlank());
         }
         assertEquals("textPane is not 0", "0", calculator.getTextPaneWithoutNewLineCharacters());
         assertFalse("isAddBool() is not false", calculator.isAdding());
@@ -1119,7 +1138,7 @@ public class BasicPanelTest {
         assertEquals("Values position is not 0", 0, calculator.getValuesPosition());
         assertTrue("FirstNumBool is not true", calculator.isFirstNumber());
         assertFalse("DotButtonPressed is not false", calculator.isDotPressed());
-        assertTrue("DotButton is not enabled", calculator.getButtonDot().isEnabled());
+        assertTrue("DotButton is not enabled", calculator.getButtonDecimal().isEnabled());
     }
 
     @Test
@@ -1129,7 +1148,7 @@ public class BasicPanelTest {
         calculator.getTextPane().setText("1088");
         calculator.setValuesPosition(0);
         calculator.getValues()[0] = "1088";
-        BasicPanel.performClearEntryButtonActions(actionEvent);
+        basicPanel.performClearEntryButtonActions(actionEvent);
 
         assertTrue("textPane was not cleared", StringUtils.isBlank(calculator.getTextPaneWithoutNewLineCharacters()));
         assertFalse("Expected isAdding to be false", calculator.isAdding());
@@ -1137,7 +1156,7 @@ public class BasicPanelTest {
         assertFalse("Expected isMultiplying to be false", calculator.isMultiplying());
         assertFalse("Expected isDividing to be false", calculator.isDividing());
         assertFalse("Expected dot button to not be pushed", calculator.isDotPressed());
-        assertTrue("Expected dot button to be enabled", calculator.getButtonDot().isEnabled());
+        assertTrue("Expected dot button to be enabled", calculator.getButtonDecimal().isEnabled());
         assertTrue("Expected to be on the firstNumber", calculator.isFirstNumber());
     }
 
@@ -1150,7 +1169,7 @@ public class BasicPanelTest {
         calculator.setValuesPosition(1);
         calculator.getValues()[0] = "100";
         calculator.getValues()[1] = "1088";
-        BasicPanel.performClearEntryButtonActions(actionEvent);
+        basicPanel.performClearEntryButtonActions(actionEvent);
 
         assertTrue("textPane was not cleared", StringUtils.isBlank(calculator.getTextPaneWithoutNewLineCharacters()));
         assertTrue("Expected isAdding to be true", calculator.isAdding());
@@ -1158,7 +1177,7 @@ public class BasicPanelTest {
         assertFalse("Expected isMultiplying to be false", calculator.isMultiplying());
         assertFalse("Expected isDividing to be false", calculator.isDividing());
         assertFalse("Expected dot button to not be pushed", calculator.isDotPressed());
-        assertTrue("Expected dot button to be enabled", calculator.getButtonDot().isEnabled());
+        assertTrue("Expected dot button to be enabled", calculator.getButtonDecimal().isEnabled());
         assertTrue("Expected to be on the firstNumber", calculator.isFirstNumber());
         assertEquals("Expected to be at valuesPosition:0", 0, calculator.getValuesPosition());
     }
@@ -1168,7 +1187,7 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("CE");
         calculator.getTextPane().setText("1088 +");
-        BasicPanel.performClearEntryButtonActions(actionEvent);
+        basicPanel.performClearEntryButtonActions(actionEvent);
 
         assertTrue("textPane was not cleared", StringUtils.isBlank(calculator.getTextPaneWithoutAnyOperator()));
         assertFalse("isAdding() expected to be false", calculator.isAdding());
@@ -1178,7 +1197,7 @@ public class BasicPanelTest {
     public void pressedSquaredButtonWithNoEntry()
     {
         when(actionEvent.getActionCommand()).thenReturn("x²");
-        BasicPanel.performSquaredButtonActions(actionEvent);
+        basicPanel.performSquaredButtonActions(actionEvent);
         assertEquals("Expected textPane to contain message", "Enter a Number", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected values[0] to be empty", calculator.getValues()[0].isEmpty());
     }
@@ -1187,12 +1206,12 @@ public class BasicPanelTest {
     public void pressed5ThenSquaredButton()
     {
         when(actionEvent.getActionCommand()).thenReturn("5").thenReturn("x²");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[0] is not 5", 5, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 5", "5", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performSquaredButtonActions(actionEvent);
+        basicPanel.performSquaredButtonActions(actionEvent);
         assertEquals("Values[0] is not 25", 25, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 25", "25", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
@@ -1203,18 +1222,18 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("5").thenReturn(".")
                 .thenReturn("5").thenReturn("x²");
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performDotButtonActions(actionEvent);
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performDecimalButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[0] is not 5.5", 5.5, Double.parseDouble(calculator.getValues()[0]), delta); // 0.0
         assertEquals("textPane should be 5.5", "5.5", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performSquaredButtonActions(actionEvent);
+        basicPanel.performSquaredButtonActions(actionEvent);
         assertEquals("Values[0] is not 30.25", 30.25, Double.parseDouble(calculator.getValues()[0]), delta);
         assertEquals("textPane should be 30.25", "30.25", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
-        assertFalse("Expected dot button to be disabled", calculator.isDotPressed());
+        assertTrue("Expected dot button to be disabled", calculator.isDotPressed());
     }
 
     @Test
@@ -1222,24 +1241,24 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("5").thenReturn("±")
                 .thenReturn("x²").thenReturn("±");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[0] is not 5", 5, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 5", "5", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNegateButtonActions(actionEvent);
+        basicPanel.performNegateButtonActions(actionEvent);
         assertEquals("Values[0] is not -5", -5, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be -5", "-5", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isNumberNegative to be true", calculator.isNumberNegative());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performSquaredButtonActions(actionEvent);
+        basicPanel.performSquaredButtonActions(actionEvent);
         assertEquals("Values[0] is not 25", 25, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 25", "25", calculator.getTextPaneWithoutNewLineCharacters());
         assertFalse("Expected isNumberNegative to be false", calculator.isNumberNegative());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNegateButtonActions(actionEvent);
+        basicPanel.performNegateButtonActions(actionEvent);
         assertEquals("Values[0] is not -25", -25, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be -25", "-25", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("Expected isNumberNegative to be true", calculator.isNumberNegative());
@@ -1251,18 +1270,18 @@ public class BasicPanelTest {
     public void pressed5ThenNegateThenNegate()
     {
         when(actionEvent.getActionCommand()).thenReturn("5").thenReturn("±").thenReturn("±");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Values[0] is not 5", 5, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 5", "5", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
 
-        BasicPanel.performNegateButtonActions(actionEvent);
+        basicPanel.performNegateButtonActions(actionEvent);
         assertEquals("Values[0] is not -5", -5, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be -5", "-5", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
         assertTrue("Expected number to be negative", calculator.isNumberNegative());
 
-        BasicPanel.performNegateButtonActions(actionEvent);
+        basicPanel.performNegateButtonActions(actionEvent);
         assertEquals("Values[0] is not 5", 5, Integer.parseInt(calculator.getValues()[0]));
         assertEquals("textPane should be 5", "5", calculator.getTextPaneWithoutNewLineCharacters());
         assertTrue("We are not on the firstNumber", calculator.isFirstNumber());
@@ -1274,7 +1293,7 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("±");
         calculator.getTextPane().setText("E");
-        BasicPanel.performNegateButtonActions(actionEvent);
+        basicPanel.performNegateButtonActions(actionEvent);
         assertEquals("Expected error message in textPane", "E", calculator.getTextPaneWithoutNewLineCharacters());
     }
 
@@ -1283,7 +1302,7 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("±");
         calculator.getTextPane().setText("");
-        BasicPanel.performNegateButtonActions(actionEvent);
+        basicPanel.performNegateButtonActions(actionEvent);
         assertEquals("Expected error message in textPane", "Enter a Number", calculator.getTextPaneWithoutNewLineCharacters());
     }
 
@@ -1292,7 +1311,7 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("√");
         calculator.getTextPane().setText("E");
-        BasicPanel.performSquareRootButtonActions(actionEvent);
+        basicPanel.performSquareRootButtonActions(actionEvent);
         assertEquals("Expected textPane to show error", "E", calculator.getTextPaneWithoutNewLineCharacters());
     }
 
@@ -1301,7 +1320,7 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("√");
         calculator.getTextPane().setText("");
-        BasicPanel.performSquareRootButtonActions(actionEvent);
+        basicPanel.performSquareRootButtonActions(actionEvent);
         assertEquals("Expected textPane to show error message", "Enter a Number", calculator.getTextPaneWithoutNewLineCharacters());
     }
 
@@ -1312,7 +1331,7 @@ public class BasicPanelTest {
         calculator.getTextPane().setText("-5");
         calculator.getValues()[0] = "-5;";
         calculator.setValuesPosition(0);
-        BasicPanel.performSquareRootButtonActions(actionEvent);
+        basicPanel.performSquareRootButtonActions(actionEvent);
         assertEquals("Expected textPane to show error message", "E", calculator.getTextPaneWithoutNewLineCharacters());
     }
 
@@ -1323,7 +1342,7 @@ public class BasicPanelTest {
         calculator.getTextPane().setText("25");
         calculator.getValues()[0] = "25";
         calculator.setValuesPosition(0);
-        BasicPanel.performSquareRootButtonActions(actionEvent);
+        basicPanel.performSquareRootButtonActions(actionEvent);
         assertEquals("Expected result to be 5.0", 5.0, Double.parseDouble(calculator.getTextPaneWithoutNewLineCharacters()), delta);
     }
 
@@ -1332,7 +1351,7 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("MS");
         calculator.getTextPane().setText("");
-        BasicPanel.performMemoryStoreActions(actionEvent);
+        basicPanel.performMemoryStoreActions(actionEvent);
         assertTrue("Expected MemoryValues[0] to be blank", calculator.getMemoryValues()[0].isBlank());
         assertEquals("Expected textPane to show Enter a Number", "Enter a Number", calculator.getTextPaneWithoutNewLineCharacters());
     }
@@ -1342,7 +1361,7 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("MS");
         calculator.getTextPane().setText("5");
-        BasicPanel.performMemoryStoreActions(actionEvent);
+        basicPanel.performMemoryStoreActions(actionEvent);
         assertEquals("Expected textPane to still show 5", "5", calculator.getTextPaneWithoutNewLineCharacters());
         assertEquals("Expected MemoryValues[0] to be 5", "5", calculator.getMemoryValues()[0]);
         assertSame("Expected MemoryPosition to be 1", 1, calculator.getMemoryPosition());
@@ -1356,7 +1375,7 @@ public class BasicPanelTest {
         calculator.getMemoryValues()[0] = "15";
         calculator.setMemoryPosition(10);
         assertEquals("Expected memoryValues[0] to be 15", "15", calculator.getMemoryValues()[0]);
-        BasicPanel.performMemoryStoreActions(actionEvent);
+        basicPanel.performMemoryStoreActions(actionEvent);
         assertEquals("Expected memoryValues[0] to be 2", "2", calculator.getMemoryValues()[0]);
     }
 
@@ -1366,7 +1385,7 @@ public class BasicPanelTest {
         when(actionEvent.getActionCommand()).thenReturn("MS");
         calculator.getTextPane().setText("E");
         assertTrue("Expected textPane to contain bad text", calculator.textPaneContainsBadText());
-        BasicPanel.performMemoryStoreActions(actionEvent);
+        basicPanel.performMemoryStoreActions(actionEvent);
         assertTrue("Expected MemoryValues[0] to be blank", calculator.getMemoryValues()[0].isBlank());
     }
 
@@ -1383,20 +1402,20 @@ public class BasicPanelTest {
         calculator.getMemoryValues()[5] = "1080";
         calculator.setMemoryPosition(6);
         calculator.setMemoryRecallPosition(0);
-        BasicPanel.performMemoryRecallActions(actionEvent);
+        basicPanel.performMemoryRecallActions(actionEvent);
         assertEquals("Expected textPane to show 15", "15", calculator.getTextPaneWithoutNewLineCharacters());
         assertSame("Expected memoryRecallPosition to be 1", 1, calculator.getMemoryRecallPosition());
         assertSame("Expected memoryPosition to be 6", 6, calculator.getMemoryPosition());
-        BasicPanel.performMemoryRecallActions(actionEvent);
+        basicPanel.performMemoryRecallActions(actionEvent);
         assertEquals("Expected textPane to show 534", "534", calculator.getTextPaneWithoutNewLineCharacters());
         assertSame("Expected memoryRecallPosition to be 2", 2, calculator.getMemoryRecallPosition());
         assertSame("Expected memoryPosition to be 6", 6, calculator.getMemoryPosition());
-        BasicPanel.performMemoryRecallActions(actionEvent);
+        basicPanel.performMemoryRecallActions(actionEvent);
         assertEquals("Expected textPane to show -9", "-9", calculator.getTextPaneWithoutNewLineCharacters());
         assertSame("Expected memoryRecallPosition to be 3", 3, calculator.getMemoryRecallPosition());
         assertSame("Expected memoryPosition to be 6", 6, calculator.getMemoryPosition());
         calculator.setMemoryRecallPosition(10);
-        BasicPanel.performMemoryRecallActions(actionEvent);
+        basicPanel.performMemoryRecallActions(actionEvent);
         assertEquals("Expected textPane to show 15", "15", calculator.getTextPaneWithoutNewLineCharacters());
         assertSame("Expected memoryRecallPosition to be 1", 1, calculator.getMemoryRecallPosition());
         assertSame("Expected memoryPosition to be 6", 6, calculator.getMemoryPosition());
@@ -1408,7 +1427,7 @@ public class BasicPanelTest {
         when(actionEvent.getActionCommand()).thenReturn("MC");
         calculator.getMemoryValues()[9] = "15";
         calculator.setMemoryPosition(10);
-        BasicPanel.performMemoryClearActions(actionEvent);
+        basicPanel.performMemoryClearActions(actionEvent);
         assertTrue("Expected memoryValues[9] to be empty", calculator.getMemoryValues()[9].isBlank());
         assertSame("Expected memoryPosition to be 0",0, calculator.getMemoryPosition());
         assertSame("Expected memoryRecallPosition to be 0", 0, calculator.getMemoryRecallPosition());
@@ -1426,7 +1445,7 @@ public class BasicPanelTest {
         calculator.setMemoryPosition(1);
         calculator.getTextPane().setText("5");
         calculator.setValuesPosition(0);
-        BasicPanel.performMemoryAddActions(actionEvent);
+        basicPanel.performMemoryAddActions(actionEvent);
         assertEquals("Expected memoryValues[0] to be 15", "15", calculator.getMemoryValues()[0]);
         assertSame("Expected memoryPosition to be 1", 1, calculator.getMemoryPosition());
         assertSame("Expected memoryRecallPosition to be 0", 0, calculator.getMemoryRecallPosition());
@@ -1441,7 +1460,7 @@ public class BasicPanelTest {
         calculator.setMemoryPosition(1);
         calculator.getTextPane().setText("");
         calculator.setValuesPosition(0);
-        BasicPanel.performMemoryAddActions(actionEvent);
+        basicPanel.performMemoryAddActions(actionEvent);
         assertEquals("Expected memoryValues[0] to be 10", "10", calculator.getMemoryValues()[0]);
         assertSame("Expected memoryPosition to be 1", 1, calculator.getMemoryPosition());
         assertSame("Expected memoryRecallPosition to be 0", 0, calculator.getMemoryRecallPosition());
@@ -1456,7 +1475,7 @@ public class BasicPanelTest {
         calculator.setMemoryPosition(0);
         calculator.getTextPane().setText("10");
         calculator.setValuesPosition(0);
-        BasicPanel.performMemoryAddActions(actionEvent);
+        basicPanel.performMemoryAddActions(actionEvent);
         assertEquals("Expected memoryValues[0] to be blank", "", calculator.getMemoryValues()[0]);
         assertSame("Expected memoryPosition to be 0", 0, calculator.getMemoryPosition());
         assertSame("Expected memoryRecallPosition to be 0", 0, calculator.getMemoryRecallPosition());
@@ -1471,7 +1490,7 @@ public class BasicPanelTest {
         calculator.setMemoryPosition(1);
         calculator.getTextPane().setText("5");
         calculator.setValuesPosition(0);
-        BasicPanel.performMemorySubtractionActions(actionEvent);
+        basicPanel.performMemorySubtractionActions(actionEvent);
         assertEquals("Expected memoryValues[0] to be 10", "10", calculator.getMemoryValues()[0]);
         assertSame("Expected memoryPosition to be 1", 1, calculator.getMemoryPosition());
         assertSame("Expected memoryRecallPosition to be 0", 0, calculator.getMemoryRecallPosition());
@@ -1486,7 +1505,7 @@ public class BasicPanelTest {
         calculator.setMemoryPosition(0);
         calculator.getTextPane().setText("5");
         calculator.setValuesPosition(0);
-        BasicPanel.performMemorySubtractionActions(actionEvent);
+        basicPanel.performMemorySubtractionActions(actionEvent);
         assertEquals("Expected memoryValues[0] to be blank", "", calculator.getMemoryValues()[0]);
         assertSame("Expected memoryPosition to be 0", 0, calculator.getMemoryPosition());
         assertSame("Expected memoryRecallPosition to be 0", 0, calculator.getMemoryRecallPosition());
@@ -1501,7 +1520,7 @@ public class BasicPanelTest {
         calculator.setMemoryPosition(1);
         calculator.getTextPane().setText("");
         calculator.setValuesPosition(0);
-        BasicPanel.performMemorySubtractionActions(actionEvent);
+        basicPanel.performMemorySubtractionActions(actionEvent);
         assertEquals("Expected memoryValues[0] to be 15", "15", calculator.getMemoryValues()[0]);
         assertSame("Expected memoryPosition to be 1", 1, calculator.getMemoryPosition());
         assertSame("Expected memoryRecallPosition to be 0", 0, calculator.getMemoryRecallPosition());
@@ -1512,7 +1531,7 @@ public class BasicPanelTest {
     public void pressedFractionWhenTextPaneContainsBadText()
     {
         calculator.getTextPane().setText("Enter a Number");
-        BasicPanel.performFractionButtonActions(actionEvent);
+        basicPanel.performFractionButtonActions(actionEvent);
         assertEquals("Expected textPane to show bad text", "Enter a Number", calculator.getTextPaneWithoutNewLineCharacters());
     }
 
@@ -1520,8 +1539,8 @@ public class BasicPanelTest {
     public void pressed0ThenFraction()
     {
         when(actionEvent.getActionCommand()).thenReturn("0").thenReturn("⅟x");
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performFractionButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performFractionButtonActions(actionEvent);
         assertEquals("Expected textPane to be Infinity", "Infinity", calculator.getTextPaneWithoutNewLineCharacters());
         assertEquals("Expected values[0] to be blank", "", calculator.getValues()[0]);
     }
@@ -1530,7 +1549,7 @@ public class BasicPanelTest {
     public void pressedFractionWhenTextPaneIsBlank()
     {
         calculator.getTextPane().setText("");
-        BasicPanel.performFractionButtonActions(actionEvent);
+        basicPanel.performFractionButtonActions(actionEvent);
         assertEquals("Expected textPane to show bad text", "Enter a Number", calculator.getTextPaneWithoutNewLineCharacters());
     }
 
@@ -1539,18 +1558,18 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("⅟x");
         calculator.getTextPane().setText("5");
-        BasicPanel.performFractionButtonActions(actionEvent);
+        basicPanel.performFractionButtonActions(actionEvent);
         assertEquals("Expected textPane to be 0.2", "0.2", calculator.getTextPaneWithoutNewLineCharacters());
         assertEquals("Expected values[0] to be 0.2", "0.2", calculator.getValues()[0]);
         assertTrue("Expected dot button to be pressed", calculator.isDotPressed());
-        assertFalse("Expected dot button to be disabled", calculator.getButtonDot().isEnabled());
+        assertFalse("Expected dot button to be disabled", calculator.getButtonDecimal().isEnabled());
     }
 
     @Test
     public void pressedPercentWhenTextPaneContainsBadText()
     {
         calculator.getTextPane().setText("Enter a Number");
-        BasicPanel.performPercentButtonActions(actionEvent);
+        basicPanel.performPercentButtonActions(actionEvent);
         assertEquals("Expected textPane to show bad text", "Enter a Number", calculator.getTextPaneWithoutNewLineCharacters());
     }
 
@@ -1558,7 +1577,7 @@ public class BasicPanelTest {
     public void pressedPercentWhenTextPaneIsBlank()
     {
         calculator.getTextPane().setText("");
-        BasicPanel.performPercentButtonActions(actionEvent);
+        basicPanel.performPercentButtonActions(actionEvent);
         assertEquals("Expected textPane to show bad text", "Enter a Number", calculator.getTextPaneWithoutNewLineCharacters());
     }
 
@@ -1566,25 +1585,25 @@ public class BasicPanelTest {
     public void pressedPercentWithPositiveNumber()
     {
         when(actionEvent.getActionCommand()).thenReturn("5").thenReturn("%");
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performPercentButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performPercentButtonActions(actionEvent);
         assertEquals("Expected textPane to be 0.05", "0.05", calculator.getTextPaneWithoutNewLineCharacters());
         assertEquals("Expected values[0] to be 0.05", "0.05", calculator.getValues()[0]);
         assertTrue("Expected dot to be pressed", calculator.isDotPressed());
-        assertFalse("Expected dot button to be disabled", calculator.getButtonDot().isEnabled());
+        assertFalse("Expected dot button to be disabled", calculator.getButtonDecimal().isEnabled());
     }
 
     @Test
     public void pressedPercentWithNegativeNumber()
     {
         when(actionEvent.getActionCommand()).thenReturn("-").thenReturn("5").thenReturn("%");
-        BasicPanel.performSubtractionButtonActions(actionEvent);
-        BasicPanel.performNumberButtonActions(actionEvent);
-        BasicPanel.performPercentButtonActions(actionEvent);
+        basicPanel.performSubtractionButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performPercentButtonActions(actionEvent);
         assertEquals("Expected textPane to be -0.05", "-0.05", calculator.getTextPaneWithoutNewLineCharacters());
         assertEquals("Expected values[0] to be -0.05", "-0.05", calculator.getValues()[0]);
         assertTrue("Expected dot to be pressed", calculator.isDotPressed());
-        assertFalse("Expected dot button to be disabled", calculator.getButtonDot().isEnabled());
+        assertFalse("Expected dot button to be disabled", calculator.getButtonDecimal().isEnabled());
     }
 
     @Test
@@ -1593,45 +1612,45 @@ public class BasicPanelTest {
         when(actionEvent.getActionCommand()).thenReturn("1").thenReturn("0")
                 .thenReturn("6").thenReturn("5").thenReturn(".").thenReturn("5")
                 .thenReturn("4").thenReturn("5").thenReturn("7");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertFalse("Expected isDotPressed to be false", calculator.isDotPressed());
         assertEquals("Expected values[0] to be 1", "1", calculator.getValues()[0]);
         assertEquals("Expected textPane to be 1", "1", calculator.getTextPaneWithoutNewLineCharacters());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertFalse("Expected isDotPressed to be false", calculator.isDotPressed());
         assertEquals("Expected values[0] to be 10", "10", calculator.getValues()[0]);
         assertEquals("Expected textPane to be 10", "10", calculator.getTextPaneWithoutNewLineCharacters());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertFalse("Expected isDotPressed to be false", calculator.isDotPressed());
         assertEquals("Expected values[0] to be 106", "106", calculator.getValues()[0]);
         assertEquals("Expected textPane to be 106", "106", calculator.getTextPaneWithoutNewLineCharacters());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertFalse("Expected isDotPressed to be false", calculator.isDotPressed());
         assertEquals("Expected values[0] to be 1065", "1065", calculator.getValues()[0]);
         assertEquals("Expected textPane to be 1,065", "1,065", calculator.getTextPaneWithoutNewLineCharacters());
-        BasicPanel.performDotButtonActions(actionEvent);
+        basicPanel.performDecimalButtonActions(actionEvent);
         assertTrue("Expected isDotPressed to be true", calculator.isDotPressed());
-        assertFalse("Expected dot button to be disabled", calculator.getButtonDot().isEnabled());
+        assertFalse("Expected dot button to be disabled", calculator.getButtonDecimal().isEnabled());
         assertEquals("Expected values[0] to be 1065.", "1065.", calculator.getValues()[0]);
         assertEquals("Expected textPane to be 1,065.", "1,065.", calculator.getTextPaneWithoutNewLineCharacters());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertTrue("Expected isDotPressed to be true", calculator.isDotPressed());
-        assertFalse("Expected dot button to be disabled", calculator.getButtonDot().isEnabled());
+        assertFalse("Expected dot button to be disabled", calculator.getButtonDecimal().isEnabled());
         assertEquals("Expected values[0] to be 1065.5", "1065.5", calculator.getValues()[0]);
         assertEquals("Expected textPane to be 1,065.5", "1,065.5", calculator.getTextPaneWithoutNewLineCharacters());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertTrue("Expected isDotPressed to be true", calculator.isDotPressed());
-        assertFalse("Expected dot button to be disabled", calculator.getButtonDot().isEnabled());
+        assertFalse("Expected dot button to be disabled", calculator.getButtonDecimal().isEnabled());
         assertEquals("Expected values[0] to be 1065.54", "1065.54", calculator.getValues()[0]);
         assertEquals("Expected textPane to be 1,065.54", "1,065.54", calculator.getTextPaneWithoutNewLineCharacters());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertTrue("Expected isDotPressed to be true", calculator.isDotPressed());
-        assertFalse("Expected dot button to be disabled", calculator.getButtonDot().isEnabled());
+        assertFalse("Expected dot button to be disabled", calculator.getButtonDecimal().isEnabled());
         assertEquals("Expected values[0] to be 1065.545", "1065.545", calculator.getValues()[0]);
         assertEquals("Expected textPane to be 1,065.545", "1,065.545", calculator.getTextPaneWithoutNewLineCharacters());
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertTrue("Expected isDotPressed to be true", calculator.isDotPressed());
-        assertFalse("Expected dot button to be disabled", calculator.getButtonDot().isEnabled());
+        assertFalse("Expected dot button to be disabled", calculator.getButtonDecimal().isEnabled());
         assertEquals("Expected values[0] to be 1065.5457", "1065.5457", calculator.getValues()[0]);
         assertEquals("Expected textPane to be 1,065.5457", "1,065.5457", calculator.getTextPaneWithoutNewLineCharacters());
     }
@@ -1641,9 +1660,20 @@ public class BasicPanelTest {
     {
         when(actionEvent.getActionCommand()).thenReturn("0");
         calculator.getTextPane().setText("Infinity");
-        BasicPanel.performNumberButtonActions(actionEvent);
+        basicPanel.performNumberButtonActions(actionEvent);
         assertEquals("Expected values[0] to be blank", "", calculator.getValues()[0]);
         assertEquals("Expected textPane to show Infinity", "Infinity", calculator.getTextPaneWithoutNewLineCharacters());
+    }
+
+    @Test
+    public void pressedANumberWhenMaxLengthHasBeenMet()
+    {
+        when(actionEvent.getActionCommand()).thenReturn("5");
+        calculator.getTextPane().setText("4,500,424");
+        calculator.getValues()[0] = "4500424";
+        basicPanel.performNumberButtonActions(actionEvent);
+        assertEquals("Expected textPane to be the same", "4,500,424", calculator.getTextPaneWithoutNewLineCharacters());
+        assertEquals("Expected values[0] to be the same", "4500424", calculator.getValues()[0]);
     }
 
     @Test
